2002-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools: Fixed bug #528390.

2002-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct (matrix): Accepted FR #524430 (-nocase).

	* doctools: FR #527716 accepted. Bug #527025 partially fixed.

2002-03-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>  

	* Makefile.in (doc_generate): Added "TCLLIBPATH=$(srcdir)/modules"
	  in front of the mpexpand invocation so that it is forced to use
	  the "expander" package inside of the distribution. This fixes
	  Tcllib Bug #525007 reported by Don Porter
	  <dgp@users.sourceforge.net>.

2002-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* New module: dns
	* Makefile.in: updated for new module

2002-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>  

	* doctools: Done FR #517599. FR #520269.

	* mime: Fixed bug #519623.

	* Makefile.in (install-doc): Changed code determining the files to
	  install to handle missing files better (use 'ls', suppress error
	  messages).

2002-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>  

	* exif: New module. FR 517066 accepted.

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (statcheck, frink, procheck): Added developer
	  targets to invoke two static code checkers.

	* Ran frink over the package and corrected several minor problems.

2002-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in: Added target for generation of documentation in
	  various formats from .man pages

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Applied patch 511692.

2002-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (dist): Brought archive names and contents more in
	  sync with earlier releases. This comes from work on release 1.2.

2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	