@@ -1,9 +1,16 @@
+2002-03-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* expander.tcl (Op_expand): Fix for SF Bug #530056. Added code
+	  checking start and end levels for pushed/popped contexts and
+	  alert the caller if the numbers do not match, indicating that
+	  the macros pushed more or less contexts than popped.
+
 2002-02-26  Joe English  <jenglish@users.sourceforge.net
 
 	* tabify.tcl, tabify.test: fix for #521590,
 	  [tabify2 ""] and [untabify2 ""] raised an error.
 
-2002-02-14  Tcl Project  <akupries@shaw.ca>
+2002-02-14  Tcl Project  <andreas_kupries@users.sourceforge.net>
 
 	* expander.tcl: Frink run.
 
