@@ -1,3 +1,7 @@
+2002-03-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* textutil (expander): Fixed SF Bug #530056.
+
 2002-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* doctools: Fixed bug #528390.
